--- a/cli/tsconfig.json
+++ b/cli/tsconfig.json
@@ -3,6 +3,8 @@
       "target": "es5",
       "lib": ["es2015"],
       "moduleResolution": "node",
+      "strict": true,
+      "allowJs": true,
       "baseUrl": ".",
       "paths": {
         "*": [".", "../output/*"]
