--- a/package.json
+++ b/package.json
@@ -4,6 +4,8 @@
   "description": "",
   "main": "index.js",
   "scripts": {
+    "generate:ts": "pulp run -m GenerateTS",
+    "prebuild": "npm run generate:ts",
     "build": "pulp build && tsc -P cli/tsconfig.json --outDir build"
   },
   "repository": {
@@ -19,6 +21,7 @@
   "devDependencies": {
     "@types/node": "^8.0.31",
     "bower": "^1.8.2",
+    "prettier": "^1.7.3",
     "pulp": "^12.0.1",
     "purescript": "^0.11.6",
     "purs": "0.0.8",
